--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -29,4 +29,4 @@ jobs:
         run: pip3 install ansible-base
 
       - name: ansible-run
-        run: ansible-playbook playbooks/playbook.yml --extra-vars "auth_key=${{ secrets.MERAKIAPI }} org_name=${{ secrets.ORG }}
+        run: ansible-playbook playbooks/playbook.yml --extra-vars "auth_key=${{ secrets.MERAKIAPI }} org_name=${{ secrets.ORG }}"
