--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -26,7 +26,7 @@ jobs:
           python-version: '3.x'
 
       - name: Install Ansible.
-        run: pip3 install ansible-base
+        run: pip3 install ansible
 
       - name: ansible-run
         run: ansible-playbook playbooks/playbook.yml --extra-vars "auth_key=${{ secrets.MERAKIAPI }} org_name=${{ secrets.ORG }}"
