--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -15,11 +15,11 @@ jobs:
     container:
       image: cytopia/ansible:latest
       volumes:
-        - ansible-dir/:/data
+        - playbooks:/data
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
           path: 'ansible'
       - name: start playbook
-        run: ansible-playbook playbooks/playbook.yml --extra-vars --extra-vars "auth_key=${{ secrets.MERAKIAPI }} org_name=${{ secrets.ORG }}"
+        run: ansible-playbook playbook.yml --extra-vars --extra-vars "auth_key=${{ secrets.MERAKIAPI }} org_name=${{ secrets.ORG }}"
