--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -11,7 +11,7 @@ jobs:
     container:
       image: cytopia/ansible:latest
       volumes:
-        - playbooks:/data
+        - ./playbooks:/data
     steps:
       - name: start playbook
         run: ansible-playbook playbook.yml --extra-vars "auth_key=${{ secrets.MERAKIAPI }} org_name=${{ secrets.ORG }}"
