--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -15,5 +15,5 @@ jobs:
         timeout-minutes: 3
         uses: docker://cytopia/ansible:latest
         with:
-          args: ansible-playbook playbooks/playbook.yml --extra-vars "auth_key=${{ secrets.MERAKIAPI }} org_name=${{ secrets.ORG }}"
+          args: ansible-playbook playbooks/playbook.yml --connection=local --extra-vars "auth_key=${{ secrets.MERAKIAPI }} org_name=${{ secrets.ORG }}"
 
