--- a/playbooks/vars/default.yml
+++ b/playbooks/vars/default.yml
@@ -16,8 +16,7 @@ blockurl:
 
 blockcat:
   - "Sex Education"
-  - "SPAM URLs"
-  - "Confirmed SPAM Sources"
+  - "SPAM"
   - "Bot Nets"
   - "Spyware and Adware"
   - "Malware Sites"
